[package]
name = "wakeup"
version = "0.1.1"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Wake-on-LAN / wol tool. Wake up a host with (a) magic (packet)"
authors = ["Janina Mass <janina.mass@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version ="3.2.16", features=["regex"]}
hex = "0.4.3"
regex = "1.6.0"
directories-next = "2.0.0"
serde = {version = "1.0.144", features=["derive"]}
toml = "0.5.9"


[dev-dependencies]
predicates = "2"
assert_cmd = "2"